force-app/main/default/objects/breg_RDPMS_Adhoc_Request__c/breg_RDPMS_Adhoc_Request__c.object-meta.xml
<CustomObject>
    <label>RDPMS Adhoc Request</label>
    <nameField>
        <displayFormat>RDR-{0000}</displayFormat>
        <label>RDPMS Adhoc Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDPMS Adhoc Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>