force-app/main/default/objects/breg_RDPMS_Adhoc_Request__c/fields/breg_Case__c.field-meta.xml
<CustomField>
    <fullName>breg_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>RDPMS Adhoc Requests</relationshipLabel>
    <relationshipName>RDPMS_Adhoc_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>