force-app/main/default/objects/breg_RDPMS_Adhoc_Request__c/fields/breg_Completed_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>breg_Completed_Date_Time__c</fullName>
    <label>Completed Date Time</label>
    <type>DateTime</type>
</CustomField>