force-app/main/default/objects/breg_RDPMS_Adhoc_Request__c/fields/breg_Document__c.field-meta.xml
<CustomField>
    <fullName>breg_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Document</label>
    <referenceTo>breg_Document__c</referenceTo>
    <relationshipLabel>RDPMS Adhoc Requests</relationshipLabel>
    <relationshipName>RDPMS_Adhoc_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>