force-app/main/default/objects/breg_RDPMS_Adhoc_Request__c/fields/breg_WFWORKITEM_ID__c.field-meta.xml
<CustomField>
    <fullName>breg_WFWORKITEM_ID__c</fullName>
    <label>WF Work Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>