force-app/main/default/objects/breg_RDPMS_Adhoc_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>breg_Case__c</columns>
    <columns>breg_Completed_Date_Time__c</columns>
    <columns>breg_Status__c</columns>
    <columns>breg_WFWORKITEM_ID__c</columns>
    <filterScope>Mine</filterScope>
    <label>All</label>
</ListView>